--- a/Resources/Private/Language/locallang.xlf
+++ b/Resources/Private/Language/locallang.xlf
@@ -3,22 +3,25 @@
     <file source-language="en" datatype="plaintext" original="EXT:rmnd_brevo/Resources/Private/Language/locallang.xlf" product-name="rmnd_brevo">
         <header/>
         <body>
+            <trans-unit id="formManager.selectablePrototypesConfiguration.brevo.label">
+                <source>Brevo</source>
+            </trans-unit>
             <trans-unit id="formEditor.elements.FormElement.editor.brevoAttribute.label">
                 <source>Brevo Attribute Name</source>
             </trans-unit>
-            <trans-unit id="formEditor.elements.Form.finisher.BrevoRegistration.editor.header.label">
-                <source>Brevo Registration</source>
+            <trans-unit id="formEditor.elements.Form.finisher.BrevoSubscribe.editor.header.label">
+                <source>Brevo Subscribe</source>
             </trans-unit>
-            <trans-unit id="formEditor.elements.Form.finisher.BrevoRegistration.editor.listIds.label">
+            <trans-unit id="formEditor.elements.Form.finisher.BrevoSubscribe.editor.listIds.label">
                 <source>List IDs (separated by comma)</source>
             </trans-unit>
-            <trans-unit id="formEditor.elements.Form.finisher.BrevoRegistration.editor.templateId.label">
+            <trans-unit id="formEditor.elements.Form.finisher.BrevoSubscribe.editor.templateId.label">
                 <source>DOI Template ID</source>
             </trans-unit>
-            <trans-unit id="formEditor.elements.Form.finisher.BrevoRegistration.editor.redirectPage.label">
+            <trans-unit id="formEditor.elements.Form.finisher.BrevoSubscribe.editor.redirectPage.label">
                 <source>DOI Redirect Page UID</source>
             </trans-unit>
-            <trans-unit id="formEditor.elements.Form.finisher.BrevoRegistration.editor.redirectPage.buttonLabel">
+            <trans-unit id="formEditor.elements.Form.finisher.BrevoSubscribe.editor.redirectPage.buttonLabel">
                 <source>Page</source>
             </trans-unit>
             <trans-unit id="formEditor.elements.Form.finisher.BrevoUnsubscribe.editor.header.label">
